Add discovery auth call
